--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,62 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div id="sidebar">
+      <div id="logo">
+        <%= link_to root_path do %>
+          <%= image_tag "logo.svg" %>
+        <% end %>
+      </div>
+
+      <ul>
+        <li class="category">Website</li>
+        <li><%= link_to "Blog", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+      </ul>
+
+      <ul>
+        <li class="category">Social</li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="https://github.com/SegXiong">Github</a></li>
+        <li><a href="mailto:segxiong0817@hotmail.com">Email</a></li>
+      </ul>
+
+      <% if !user_signed_in? %>
+        <p class="sign_in"><%= link_to "Admin login", new_user_session_path %></p>
+      <% end %>
+
+    </div>
+
+    <div id="main_content">
+      <div id="header">
+        <% if current_page?(root_path) %>
+          <p>All Post</p>
+        <% elsif current_page?(about_path) %>
+          <p>About</p>
+        <% else %>
+          <%= link_to "Back to All Post", root_path %>
+        <% end %>
+
+        <% if user_signed_in? %>
+          <div class="buttons">
+            <button class="button"><%= link_to "New Post", new_post_path %></button>
+            <button class="button"><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></button>
+          </div>
+        <% end %>
+      </div>
+
+      <% flash.each do |name, msg| %>
+        　<%= content_tag(:div, msg, :class => "alert") %>
+      <% end %>
+
+      <%= yield %>
+    </div>
+
   </body>
 </html>
